--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
@@ -42,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@redux-devtools/core": "^3.9.0",
     "@sheerun/mutationobserver-shim": "0.3.3",
     "@testing-library/react": "^9.5.0",
     "cypress": "^3.7.0",
@@ -59,6 +61,7 @@
     "mochawesome": "^6.1.1",
     "mochawesome-merge": "^4.0.3",
     "mochawesome-report-generator": "^5.1.0",
+    "redux-devtools": "^3.7.0",
     "stylelint": "^13.8.0",
     "stylelint-config-standard": "20.0.0",
     "stylelint-order": "^4.1.0"
