--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^5.0.1",
     "crypto-js": "^4.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -12,7 +13,9 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.3.0"
   },
   "scripts": {
     "cy": "cypress run",
@@ -46,6 +49,7 @@
     "@testing-library/react": "^9.5.0",
     "cypress": "^3.7.0",
     "cypress-multi-reporters": "^1.4.0",
+    "git-commit-msg-linter": "3.1.0",
     "eslint": "6.8.0",
     "eslint-config-airbnb": "18.2.0",
     "eslint-plugin-import": "2.22.1",
