--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/user-event": "^7.1.2",
     "crypto-js": "^4.0.0",
     "react": "^16.12.0",
+    "react-audio-player": "^0.17.0",
     "react-dom": "^16.12.0",
+    "react-icons": "^4.2.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
