--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "@sheerun/mutationobserver-shim": "0.3.3",
     "@testing-library/react": "^9.5.0",
+    "@types/html-entities": "^1.3.4",
     "cypress": "^3.7.0",
     "cypress-multi-reporters": "^1.4.0",
     "eslint": "6.8.0",
@@ -56,6 +57,7 @@
     "eslint-plugin-react-hooks": "4.2.0",
     "eslint-plugin-react-redux": "3.3.0",
     "eslint-plugin-sonarjs": "0.5.0",
+    "html-entities": "^1.2.1",
     "jest-localstorage-mock": "2.4.3",
     "mocha": "^7.2.0",
     "mochawesome": "^6.1.1",
