--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^5.0.1",
+    "bootstrap-icons": "^1.5.0",
     "crypto-js": "^4.0.0",
     "he": "^1.2.0",
+    "polished": "^4.1.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
