--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "polished": "^4.1.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-dropdown": "^1.9.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
