--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@34r7h/google-translate-api": "^4.0.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/user-event": "^7.1.2",
+    "@vitalets/google-translate-api": "^7.0.0",
+    "@vitalets/google-translate-token": "^1.2.0",
     "bootstrap": "^4.6.0",
     "crypto-js": "^4.0.0",
+    "google-translate-api-browser": "^1.1.71",
     "react": "^16.12.0",
     "react-bootstrap": "^1.6.1",
     "react-devtools": "^4.13.5",
