--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^16.12.0",
+    "react-redeux": "^1.0.4",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
